--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,25 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: "Roboto", "Arial", sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  line-height: normal;
+  background: #f8fcff;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+}
+p {
+  margin: 0;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+  margin: 0;
 }
